--- a/assets/styles/mixins.scss
+++ b/assets/styles/mixins.scss
@@ -1,6 +1,6 @@
 @import "variables.scss";
 
-@mixin prefix($property, $value) {
+@mixin prefix($property, $value...) {
   // adds the major vendor prefixes
   -webkit-#{$property}: $value;
   -moz-#{$property}: $value;
@@ -10,32 +10,41 @@
 }
 
 @mixin link-highlights($vertical-default, $vertical-expanded) {
-  // $vertical-default = the (negative) height needed to touch the bottom text
-  // $vertical-expanded = the (negative) height needed to cover text on hover
-  // usage example: @include link-highlights(-6px, -22px);
-  $offset: (2 * $highlight-height) + $vertical-default;
+  // $vertical-default = the height (in pixels) needed to touch the bottom text
+  // $vertical-expanded = the height (in pixels) needed to cover text on hover
+  // usage example: @include link-highlights(6px, 22px);
+  $offset: -$vertical-default + $highlight-height;
+  $default: -$vertical-default;
+  $expanded: -$vertical-expanded;
 
-  @if $offset < 0 {
+  @if $offset > 0 {
     $offset: 0px;
   }
 
-  $box-shadow-default: inset 0px $offset 0px $highlight-height $site-bg-color,
-    inset 0px $vertical-default 0px 0px $highlight-color;
+  $box-shadow-default: inset 0px $offset 0px 0px $site-bg-color,
+    inset 0px $default 0px 0px $highlight-color;
   $box-shadow-hover: inset 0px 0px 0px 0px $site-bg-color,
-    inset 0px $vertical-expanded 0px 0px $highlight-color;
+    inset 0px $expanded 0px 0px $highlight-color;
 
   &,
   &:active,
   &:visited {
-    // box-shadow: $box-shadow-default;
-    // transition: box-shadow 0.4s ease-in-out;
+    margin: 0;
+    padding: 0;
+    @include prefix(box-decoration-break, clone);
     @include prefix(box-shadow, $box-shadow-default);
-    @include prefix(transition, box-shadow 0.4s ease-in-out);
+    @include prefix(
+      transition,
+      box-shadow 0.4s ease-in-out,
+      margin 0.4s ease-in-out,
+      padding 0.4s ease-in-out
+    );
   }
 
   &:focus,
   &:hover {
-    // box-shadow: $box-shadow-hover;
+    margin: 0 -$highlight-height;
+    padding: 0 $highlight-height;
     @include prefix(box-shadow, $box-shadow-hover);
   }
 }
